implement flux streaming

--- a/pricedata/src/main/resources/application.properties
+++ b/pricedata/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=price-data-service
 server.port=8762
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+port=27017
+dbname=test
