--- a/trader/src/main/resources/application.properties
+++ b/trader/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=trader-service
+server.port=8763
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+port=27017
+dbname=trader
+eureka.client.fetch-registry=true
 
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 210000
